--- a/www/index.html
+++ b/www/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
 <meta charset="UTF-8">
-<title>juego html5</title>
+<title>Juego HTML5 </title>
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <link rel="stylesheet" type="text/css" href="css/estilos.css" media="screen" />
 <script type="text/javascript" src="http://code.jquery.com/jquery-1.11.1.js"></script>
@@ -11,11 +11,12 @@
 </head>
 <body>
 <div class="contenedorjuego">
-	<canvas id="game" width="800" height="400"class="sombra redondea"></canvas>
+	<canvas id="game" width="800" height="400" class="sombra redondea"></canvas>
 
 </div>
 	
 
+	<script type="text/javascript" src="js/preloadjs-0.1.0.min.js"></script>
 	<script type="text/javascript" src="js/main.js"></script>
 	
 </body>
